# DBT-BigQuery-Analytics-Look-eCommerce

./: .gitignore  LICENSE  README.md  dbt_project.yml  get_keyfile.sh  pyproject.toml
dbt/look_ecommerce_analytics/: dbt_project.yml  profiles.yml
dbt/look_ecommerce_analytics/models/example/: raw_ecommerce_distribution_centers.sql  raw_ecommerce_events.sql  raw_ecommerce_inventory_items.sql  raw_ecommerce_order_items.sql  raw_ecommerce_orders.sql  raw_ecommerce_products.sql  raw_ecommerce_users.sql  schema.yml  sources.yml
